--- a/scss/partials/components/_carousel.scss
+++ b/scss/partials/components/_carousel.scss
@@ -26,7 +26,7 @@
 
         .card{
             position: absolute;
-            top: 0%;
+            top: 30vh;
             z-index: 3;
             color: white;
             font-size: 1.5rem;
